K8s/Addons/pingpong/pingpong_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  labels:
    app: pingpong
spec:
  selector:
    app: pingpong-pod
  ports:
    - port: 80
      protocol: TCP
      name: api
      targetPort: 3000
